# opentx

./: .gitignore
radio/src/: CMakeLists.txt
radio/src/targets/diy/: CMakeLists.txt  backlight_driver.cpp  board.cpp  board.h  hal.h
radio/src/targets/diy/bootloader/: boot_menu.cpp
